--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgres://postgres:secret@localhost:5432/simplebank?sslmode=disable
 SERVER_ADDRESS=localhost:8080
+TOKEN_KEY=secret123kj109opabkl10987qplasds
+TOKEN_DURATION=30m
